--- a/recent/recent.html
+++ b/recent/recent.html
@@ -74,8 +74,8 @@
         </div>
         <div id="offlineWarning"
              style=" width: 250px; height: 35px; cursor: pointer; padding-left: 30px; display: none; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) ">
-            <img height="20" src="../images/Wifi-Error.png" width="20"/>&nbsp;&nbsp;<span
-                style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span>
+            <img height="20" src="../images/Wifi-Error.png" width="20"style="margin-top: 10px;border:red solid 0px;float: left;margin-left: 30px"/>
+            <div style="color: #966D3F;width:50%;font-weight: bold;border:red solid 0px;margin-top: 10px;float: left;">&nbsp;&nbsp;网络连接已断开</div>
         </div>
         <div id="recent" style="width:250px;flex:1;overflow: auto;border-right: 1px solid rgb(229,229,229); ">
         </div>
@@ -190,7 +190,7 @@
                 var now = new Date();
                 try {
                     if (MsgsOneData!==null) {
-                        MsgsOneDataName = MsgsOneData.name+': '
+                        MsgsOneDataName = MsgsOneData.name===user.name?'我: ':MsgsOneData.name+': '
                         lastSpTime=MsgsOneData.sendTime
                         if(lastSpTime){
                             var date = new Date();
@@ -199,12 +199,21 @@
                                 timeStr+="今天 ";
                                 timeStr+=date.getHours()+":"+(date.getMinutes()<10?"0"+date.getMinutes():date.getMinutes());
                             }else if(now.getFullYear()==date.getFullYear()){
-                                timeStr+=date.getFullYear()+'/'+(date.getMonth()+1)+"/"+date.getDate()+"";
-                            }
+                                if (date.getDate()===now.getDate()-1) {
+                                    timeStr+="昨天 ";
+                                }else {
+                                    timeStr+=date.getFullYear()+'/'+(date.getMonth()+1)+"/"+date.getDate()+"";
+                                }
 
+                            }
                         }
                         if (typeof JSON.parse(MsgsOneData.content) === "object") {
-                            data = '[图片]'
+                            if (JSON.parse(MsgsOneData.content).width!==undefined && JSON.parse(MsgsOneData.content).height!==undefined) {
+                                data = '[图片]'
+                            }else {
+                                data = '[语音消息]'
+                            }
+
                         } else {
                             data = MsgsOneData.content
                         }
@@ -255,7 +264,7 @@
 
                                <div style="border:red solid 0px;line-height:25px; color:rgb(128,128,128);width: 170px;height: 20px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left">${MsgsOneDataName}${data}</div>
                          </div>` :
-                        `<img src="${person.pic?person.pic:'../images/1024x1024.png'}"  style="width:40px;height:40px;border-radius:0px;"/>&nbsp;&nbsp;
+                        `<img src="${person.pic?person.pic:'../images/1024x1024.png'}"  style="width:43px;height:43px;border-radius:0px;"/>&nbsp;&nbsp;
                         <div id="One${chatId}" style="border:red solid 0px;font-size:12px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;width:171px;height: 40px;margin-left: 0px;margin-top: 0px;float: left" >
                                <div style="border:red solid 0px;width: 95px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left">${person.name}</div>
                                <div style="border:red solid 0px;width: 69px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left;text-align: right;color: rgb(155,155,155);font-weight: bold">${timeStr}</div>
