--- a/index/index.html
+++ b/index/index.html
@@ -14,25 +14,31 @@
             height: 100%;
             background-color: #f0f0f0;
         }
-        .titlebar{
+
+        .titlebar {
             -webkit-app-region: drag;
-            width:100%;height:22px;
+            width: 100%;
+            height: 22px;
         }
-        .left .tools-area{
+
+        .left .tools-area {
             background-color: #535353;
-            width:80px;
-            height:22px;
+            width: 80px;
+            height: 22px;
         }
-        .left .titlebar{
+
+        .left .titlebar {
             display: none;
         }
-        .bottom .titlebar{
-            background-color: #636363;border-bottom: 1px solid #434343;
+
+        .bottom .titlebar {
+            background-color: #636363;
+            border-bottom: 1px solid #434343;
         }
     </style>
     <script>
         const {isDev} = require('../config')
-        const indexEntry = isDev? './index.js' :'./index.bundle.js'
+        const indexEntry = isDev ? './index.js' : './index.bundle.js'
 
         document.write(`<script src="${indexEntry}" />`)
     </script>
@@ -43,85 +49,82 @@
     <script src="./dev.js"></script>
 </head>
 <body style="overflow: hidden">
-<div class="titlebar" style=""><div class="tools-area"></div></div>
+<div class="titlebar" style="">
+    <div class="tools-area"></div>
+</div>
 <iframe id="frame" style="width:100%;height:100%;" frameborder="0"></iframe>
 </body>
 <script>
+    const {engine} = window.top
+    const ChatManager = engine.get('ChatManager')
     start()
-    async function start () {
-      let LKApplication = engine.getApplication();
-      let db = require('../store/ElecSqlite');
-      // 等待数据库初始化完毕
-      await LKApplication.getCurrentApp().start(db,LKApplication.PLATFORM_ELECTRON);
 
-      let userId
-      engine.getUserManager().asyGetAll().then(async (users) => {
-        if(users&&users.length>0){
-          let cur = users[0];
-          userId = cur.id
-          try {
-            await LKApplication.getCurrentApp().setCurrentUser(cur);
+    async function start() {
+        let LKApplication = engine.getApplication();
+        let db = require('../store/ElecSqlite');
+        // 等待数据库初始化完毕
+        await LKApplication.getCurrentApp().start(db, LKApplication.PLATFORM_ELECTRON);
 
-          }catch(err){
-            console.log({err})
-          }
-          window.theme = document.body.className = "left";
-          document.getElementById("frame").src="main.html";
-        }else{
-          document.getElementById("frame").src="register.html";
-        }
-      }).catch(function (err) {
-        alert(err)
-      })
+        let userId
+        engine.getUserManager().asyGetAll().then(async (users) => {
+            if (users && users.length > 0) {
+                let cur = users[0];
+                userId = cur.id
+                try {
+                    await LKApplication.getCurrentApp().setCurrentUser(cur);
 
-      var notifyNewMsg = function (param) {
-        // filter sync message by other devices of oneself
-        if (!param.isFromSelf) {
-          engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
-            // console.log({num})
-            ipc.send("messageReceive",{total:num});
-             var content = ''
-            try {
-                 if (param.content) {
-                     if (typeof JSON.parse(param.content) === "object") {
-                         if (JSON.parse(param.content).width!==undefined && JSON.parse(param.content).height!==undefined) {
-                             content = `${param.name}: [图片]`
-                         }else {
-                             content = `${param.name}: [语音消息]`
-                         }
-                     } else {
-                         content = `${param.name}: ${param.content}`
-                     }
-                 }else {
-                     content = ''
-                 }
-            }catch (e) {
-                content = `${param.name}: ${param.content}`
+                } catch (err) {
+                    console.log({err})
+                }
+                window.theme = document.body.className = "left";
+                document.getElementById("frame").src = "main.html";
+            } else {
+                document.getElementById("frame").src = "register.html";
             }
-            const notification = {
-              title: "新消息",
-              body: content
-            }
-            if (process.env.NODE_ENV === 'development') {
-              notification.icon = '../images/test.png'
-            }
-            new window.Notification(notification.title, notification);
-          })
-        }
-      }
-
-      var notifyReadMsg = function () {
-        engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
-          ipc.send("messageRead", {total: num});
+        }).catch(function (err) {
+            alert(err)
         })
-      }
-      engine.getChatManager().on("msgReceived",notifyNewMsg);
-      engine.getChatManager().on("msgRead",notifyReadMsg);
 
-      var checkVersion = function () {
-        window.top.ipc.send("upgrade-request",{toIndexIFNot:false});
-      }
-      LKApplication.getCurrentApp().on("currentUserChanged",checkVersion)
+        var notifyNewMsg = function (param) {
+            // filter sync message by other devices of oneself
+            if (!param.isFromSelf) {
+                engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
+                    // console.log({num})
+                    ipc.send("messageReceive", {total: num});
+                    var content = ''
+                    try {
+                        if (param.content) {
+                            content = `${param.name}: ${ChatManager.asyMessageType(param.type, param.content)}`
+                        } else {
+                            content = ''
+                        }
+                    } catch (e) {
+                        content = `${param.name}: ${param.content}`
+                    }
+                    const notification = {
+                        title: "新消息",
+                        body: content
+                    }
+                    if (process.env.NODE_ENV === 'development') {
+                        notification.icon = '../images/test.png'
+                    }
+                    new window.Notification(notification.title, notification);
+                })
+            }
+        }
+
+        var notifyReadMsg = function () {
+            engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
+                ipc.send("messageRead", {total: num});
+            })
+        }
+        engine.getChatManager().on("msgReceived", notifyNewMsg);
+        engine.getChatManager().on("msgRead", notifyReadMsg);
+
+        var checkVersion = function () {
+            window.top.ipc.send("upgrade-request", {toIndexIFNot: false});
+        }
+        LKApplication.getCurrentApp().on("currentUserChanged", checkVersion)
     }
 
 </script>
