--- a/recent/chat.html
+++ b/recent/chat.html
@@ -221,6 +221,38 @@
     const ContactManager = engine.get('ContactManager')
     const channel = lkapp.getLKWSChannel()
     const config = window.top.config
+    const {contextMenu} = window.top
+    const {remote} = window.top
+    const {Menu, MenuItem} = remote;
+    // const menu = new Menu()
+    // menu.append(new MenuItem({ label: '@', click() { console.log('item 1 clicked') } }))
+    // menu.append(new MenuItem({ type: 'separator' }))
+    // menu.append(new MenuItem({ label: 'MenuItem2', type: 'checkbox', checked: true }))
+    //
+    // window.addEventListener('contextmenu', (e) => {
+    //     e.preventDefault()
+    //     menu.popup({ window: remote.getCurrentWindow() })
+    // }, false)
+
+    // const menu = Menu.buildFromTemplate([
+    //     {
+    //         label: '@',
+    //         click: function () {
+    //             alert(1)
+    //         },
+    //         visible: true,
+    //     },
+    //     {
+    //         type: 'separator'
+    //     },
+    //
+    //
+    // ]);
+    // window.addEventListener('contextmenu', function (e) {
+    //     menu.popup({
+    //         window: remote.getCurrentWindow()
+    //     });
+    // }, false);
     initFaces();
     var ps = document.location.href.substring(document.location.href.indexOf("?") + 1);
 
@@ -366,7 +398,7 @@
 
     async function getIconNameByState(state, msgId) {
         if (state === 0) {
-            return "↑";
+            return `<img src="../images/ajax-loader.gif" width="18px"height="18px"style="margin-top: 2px"/>`;
         } else if (state === 1) {
             return "refresh";
         } else if (state === 2) {
@@ -476,6 +508,37 @@
         }
     }
 
+    function reminder(name, id) {
+        if (isGroupChat) {
+            let isGroup = false
+            const menu = new Menu()
+            menu.append(new MenuItem({
+                label: '发消息',
+                async click() {
+                    await ChatManager.asyEnsureSingleChat(id)
+                    document.location.href = "../recent/chat.html?" + isGroup + "&" + id;//isGroupChat&id
+                    await ChatManager.asytopChat(user.id, id)
+                },
+                visible: name ? true : false
+            }))
+            //menu.append(new MenuItem({type: 'separator'}))
+            menu.append(new MenuItem({
+                label: '@ ' + name,
+                click() {
+                    let range = window.getSelection();
+                    let el = document.getElementById('chatBox').contentWindow.document.body
+                    el.innerText = `@${name}  `
+                    el.focus()
+                    console.log(document.activeElement);
+
+                },
+                visible: name ? true : false
+            }))
+            menu.popup({window: remote.getCurrentWindow()})
+        }
+
+    }
+
     function hideDetaiBox(e) {
         if (e.target.id != "msgState") {
             document.getElementById("msgStateDetailBox").style.display = "none";
@@ -512,11 +575,10 @@
 
                 p = await ContactManager.asyGet(userId, senderUid)
 
-
                 if (p.pic) {
-                    html += `<img src='${p.pic}' style='border:0px solid red;cursor: pointer;margin-left:10px;margin-right:5px;width:40px;height:40px;border-radius: 4px;'>`;
+                    html += `<img src='${p.pic}' oncontextmenu="reminder('${p.name}','${p.id}')" style='border:0px solid red;cursor: pointer;margin-left:10px;margin-right:5px;width:40px;height:40px;border-radius: 4px;'>`;
                 } else {
-                    html += "<div style=\"cursor: pointer;text-align:center;margin-left:10px;margin-right:5px;width:40px;height:40px;padding:0px 5px; line-height:40px;background-color:palevioletred;border-radius: 4px;color: white;white-space: nowrap;font-size: 10px\"><div style='width:30px;overflow: hidden;text-overflow: ellipsis'>";
+                    html += `<div oncontextmenu="reminder('${p.name}','${p.id}')" style=\"cursor: pointer;text-align:center;margin-left:10px;margin-right:5px;width:40px;height:40px;padding:0px 5px; line-height:40px;background-color:palevioletred;border-radius: 4px;color: white;white-space: nowrap;font-size: 10px\"><div style='width:30px;overflow: hidden;text-overflow: ellipsis'>`;
                     html += p.name;
                     html += "</div></div>";
                 }
@@ -532,7 +594,7 @@
                 // html+="<i id='msgState' onclick=\"onMsgStateTouch('"+records[i].id+"')\"  class=\"material-icons\" style='font-size: 16px;line-height: 40px;color:#737373;margin-right: 5px;"+((isGroupChat||records[i].state==ChatManager.MESSAGE_STATE_SERVER_NOT_RECEIVE)?"cursor: pointer":"")+"'>";
                 // html+=getIconNameByState(records[i].state);
                 // html+="</i>";
-
+                html += `<img id ='msgStateImg' src="../images/ajax-loader.gif" width="20px"height="20px" style="border:0px solid red;margin-top: 1%;display: none"/>`
                 html += "<div style='border:0px solid red'><div style=\"border: 0px solid red;max-width:300px;min-height:40px;border-radius: 5px;overflow-wrap: break-word;overflow: hidden;padding: 12px 10px;background-color: #ffffff\">";
 
                 const {element} = _getMessage(records[i])
@@ -1010,7 +1072,7 @@
 
 
                     if (p.pic) {
-                        html += `<img src='${p.pic}' style='border:0px solid red;cursor: pointer;margin-left:10px;margin-right:5px;width:40px;height:40px;border-radius: 4px;'>`;
+                        html += `<img src='${p.pic}'  style='border:0px solid red;cursor: pointer;margin-left:10px;margin-right:5px;width:40px;height:40px;border-radius: 4px;'>`;
                     } else {
                         html += "<div style=\"cursor: pointer;text-align:center;margin-left:10px;margin-right:5px;width:40px;height:40px;padding:0px 5px; line-height:40px;background-color:palevioletred;border-radius: 4px;color: white;white-space: nowrap;font-size: 10px\"><div style='width:30px;overflow: hidden;text-overflow: ellipsis'>";
                         html += p.name;
