--- a/recent/recent.html
+++ b/recent/recent.html
@@ -34,8 +34,8 @@
 
         .left .title {
             background-color: #e0e0e0;
-            border-right: 1px solid rgb(238,238,238);
-            border-bottom: 1px solid rgb(238,238,238);
+            border-right: 1px solid rgb(238, 238, 238);
+            border-bottom: 1px solid rgb(238, 238, 238);
             height: 45px;
             line-height: 45px;
             font-size: 12pt;
@@ -74,8 +74,11 @@
         </div>
         <div id="offlineWarning"
              style=" width: 250px; height: 35px; cursor: pointer; padding-left: 30px; display: none; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) ">
-            <img height="20" src="../images/Wifi-Error.png" width="20"style="margin-top: 10px;border:red solid 0px;float: left;margin-left: 30px"/>
-            <div style="color: #966D3F;width:50%;font-weight: bold;border:red solid 0px;margin-top: 10px;float: left;">&nbsp;&nbsp;网络连接已断开</div>
+            <img height="20" src="../images/Wifi-Error.png" width="20"
+                 style="margin-top: 10px;border:red solid 0px;float: left;margin-left: 30px"/>
+            <div style="color: #966D3F;width:50%;font-weight: bold;border:red solid 0px;margin-top: 10px;float: left;">
+                &nbsp;&nbsp;网络连接已断开
+            </div>
         </div>
         <div id="recent" style="width:250px;flex:1;overflow: auto;border-right: 1px solid rgb(229,229,229); ">
         </div>
@@ -98,12 +101,28 @@
     let selected = "";
     let firstChatId
     var selectID = ''
-
+    const {contextMenu} = window.top
+    const {remote} = window.top
+    const {Menu, MenuItem} = remote;
     async function DeleteChat(chatId, isGroup) {
-        if (isGroup!== '1') {
+        if (isGroup !== '1') {
             await ChatManager.asyDeleteChat(user.id, chatId)
             location.reload()
         }
+    }
+    function remder (chatId,isGroupChat) {
+
+            const menu = new Menu()
+            menu.append(new MenuItem({
+                label: '删除',
+                async click() {
+                    await ChatManager.asyDeleteChat(user.id, chatId)
+                    location.reload()
+                },
+                visible: isGroupChat!=='1' ? true : false
+            }))
+            menu.popup({window: remote.getCurrentWindow()})
+
     }
 
     async function MsgsOne(chatId) {
@@ -112,14 +131,17 @@
         return await MsgsOneData[0].content
 
     }
+
     function hovers(chatId, i) {
         document.getElementById(i).style.color = 'rgb(56,190,243)'
     }
+
     function leaves(chatId, i) {
         document.getElementById(i).style.color = 'rgb(188,188,188)'
     }
-    function hover(chatId, i,isGroup) {
-        if (isGroup!== 1){
+
+    function hover(chatId, i, isGroup) {
+        if (isGroup !== 1) {
             document.getElementById(i).style.visibility = "visible"
         }
         if (selected != chatId) {
@@ -129,7 +151,7 @@
         }
     }
 
-    function leave(chatId, i,isGroup) {
+    function leave(chatId, i, isGroup) {
         if (isGroup !== '1') {
             document.getElementById(i).style.visibility = "hidden"
         }
@@ -148,6 +170,7 @@
         }
         selected = chatId
         document.getElementById(chatId).style.backgroundColor = "rgb(214,214,214)";
+        document.getElementById(`@${chatId}`)?document.getElementById(`@${chatId}`).innerHTML = '':''
     }
 
 
@@ -186,38 +209,39 @@
                 var data = ''
                 var MsgsOneDataName = ''
                 var lastSpTime;
-                var timeStr='';
+                var timeStr = '';
                 var now = new Date();
                 try {
-                    if (MsgsOneData!==null) {
-                        MsgsOneDataName = MsgsOneData.name===user.name?'我: ':MsgsOneData.name+': '
-                        lastSpTime=MsgsOneData.sendTime
-                        if(lastSpTime){
+                    if (MsgsOneData !== null) {
+                        MsgsOneDataName = MsgsOneData.name === user.name ? '我: ' : MsgsOneData.name + ': '
+                        lastSpTime = MsgsOneData.sendTime
+                        if (lastSpTime) {
                             var date = new Date();
                             date.setTime(lastSpTime);
-                            if(now.getFullYear()==date.getFullYear()&&now.getMonth()==date.getMonth()&&now.getDate()==date.getDate()){
-                                timeStr+="今天 ";
-                                timeStr+=date.getHours()+":"+(date.getMinutes()<10?"0"+date.getMinutes():date.getMinutes());
-                            }else if(now.getFullYear()==date.getFullYear()){
-                                if (date.getDate()===now.getDate()-1) {
-                                    timeStr+="昨天 ";
-                                }else {
-                                    timeStr+=date.getFullYear()+'/'+(date.getMonth()+1)+"/"+date.getDate()+"";
+                            if (now.getFullYear() == date.getFullYear() && now.getMonth() == date.getMonth() && now.getDate() == date.getDate()) {
+                                timeStr += "今天 ";
+                                timeStr += date.getHours() + ":" + (date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes());
+                            } else if (now.getFullYear() == date.getFullYear()) {
+                                if (date.getDate() === now.getDate() - 1) {
+                                    timeStr += "昨天 ";
+                                } else {
+                                    timeStr += date.getFullYear() + '/' + (date.getMonth() + 1) + "/" + date.getDate() + "";
                                 }
 
                             }
                         }
-                        if (typeof JSON.parse(MsgsOneData.content) === "object") {
-                            if (JSON.parse(MsgsOneData.content).width!==undefined && JSON.parse(MsgsOneData.content).height!==undefined) {
-                                data = '[图片]'
-                            }else {
-                                data = '[语音消息]'
-                            }
-
-                        } else {
-                            data = MsgsOneData.content
-                        }
-                    }else {
+                        // if (typeof JSON.parse(MsgsOneData.content) === "object") {
+                        //     if (JSON.parse(MsgsOneData.content).width!==undefined && JSON.parse(MsgsOneData.content).height!==undefined) {
+                        //         data = '[图片]'
+                        //     }else {
+                        //         data = '[语音消息]'
+                        //     }
+                        //
+                        // } else {
+                        //     data = MsgsOneData.content
+                        // }
+                        data = await ChatManager.asyMessageType(MsgsOneData.type, MsgsOneData.content)
+                    } else {
                         data = ''
                     }
                 } catch (err) {
@@ -228,30 +252,30 @@
                     let imghtml = ``
                     if (isGroup) {
                         var Imgdata = await ContactManager.asyGetgroupMemberImg(chatId)
-                      Imgdata = Imgdata.slice(0,4)
+                        Imgdata = Imgdata.slice(0, 4)
                         for (var j = 0; j < Imgdata.length; j++) {
-                             if (Imgdata.length === 3) {
-                             imghtml += `<div style="${Imgdata[j] === Imgdata[0] ?'width:40px;text-align:center':'width:20px'};margin:0;padding:0;float:left;;height: 20px;border:red 0px solid">
-                                          <img src="${Imgdata[j].pic === null|| Imgdata[j].pic === "" ? '../images/1024x1024.png':Imgdata[j].pic}" style="width:20px;height:20px;">
+                            if (Imgdata.length === 3) {
+                                imghtml += `<div style="${Imgdata[j] === Imgdata[0] ? 'width:40px;text-align:center' : 'width:20px'};margin:0;padding:0;float:left;;height: 20px;border:red 0px solid">
+                                          <img src="${Imgdata[j].pic === null || Imgdata[j].pic === "" ? '../images/1024x1024.png' : Imgdata[j].pic}" style="width:20px;height:20px;">
                                          </div>`
-                             }else {
-                             imghtml +=`<div style="${Imgdata.length === 2?'margin-top:10px':'margin:0'};padding:0;float:left;width:20px;height: 20px;border:0px solid red">
-                                         <img src="${Imgdata[j].pic === null|| Imgdata[j].pic === "" ? '../images/1024x1024.png':Imgdata[j].pic}" style="width:20px;height:20px;">
+                            } else {
+                                imghtml += `<div style="${Imgdata.length === 2 ? 'margin-top:10px' : 'margin:0'};padding:0;float:left;width:20px;height: 20px;border:0px solid red">
+                                         <img src="${Imgdata[j].pic === null || Imgdata[j].pic === "" ? '../images/1024x1024.png' : Imgdata[j].pic}" style="width:20px;height:20px;">
                                         </div>`
-                             }
+                            }
 
 
                         }
                     }
 
-                    html += `<div id="${chatId}" `
+                    html += `<div id="${chatId}"`
                     html += `style="border-bottom: 1px solid rgb(238,238,238);background-color: rgb(251,251,251);width:100%;height:70px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${chatId}',${i},${isGroup})" `
-                    html += `onmouseout="leave('${chatId}',${i},${isGroup})" onclick="chat('${chatId}', ${isGroup})">  `
+                    html += `onmouseout="leave('${chatId}',${i},${isGroup})" oncontextmenu="remder('${chatId}','${isGroup}')" onclick="chat('${chatId}', ${isGroup})">  `
 
-                    html += `<div id='${i}'onmouseover="hovers('${chatId}',${i})" onmouseout="leaves('${chatId}',${i})" onclick="DeleteChat('${chatId}','${isGroup}')"  style="border:red 0px solid;margin-left: -5px;visibility: hidden;color:rgb(188,188,188);width:6%;text-align: center;font-weight: bold;font-family: "Abadi MT Condensed Light"" >×</div>`
+                    html += `<div id='${i}'onmouseover="hovers('${chatId}',${i})" onmouseout="leaves('${chatId}',${i})" onclick="DeleteChat('${chatId}','${isGroup}')"  style="border:red 0px solid;margin-left: -5px;visibility: hidden;color:rgb(188,188,188);width:6%;text-align: center;font-weight: bold;font-family: "Abadi MT Condensed Light"" ></div>`
                     //
 
-
+                   let remind =`<span id = '@${chatId}' style="color: red">[有人@我]</span>`
                     html += isGroup ?
                         `<div style="width:43px;height: 43px;border: solid 1px rgb(218,223,225);background-color: rgb(221,222,224);border-radius:3px; overflow:hidden">
                                ${imghtml}
@@ -262,9 +286,9 @@
                                <div style="border:red solid 0px;width: 69px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left;text-align: right;color: rgb(155,155,155);font-weight: bold;">${timeStr}</div>
 
 
-                               <div style="border:red solid 0px;line-height:25px; color:rgb(128,128,128);width: 170px;height: 20px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left">${MsgsOneDataName}${data}</div>
+                               <div style="border:red solid 0px;line-height:25px; color:rgb(128,128,128);width: 170px;height: 20px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left">${data.indexOf('@'+user.name)!==-1?remind:''}${MsgsOneDataName}${data}</div>
                          </div>` :
-                        `<img src="${person.pic?person.pic:'../images/1024x1024.png'}"  style="width:43px;height:43px;border-radius:0px;"/>&nbsp;&nbsp;
+                        `<img src="${person.pic ? person.pic : '../images/1024x1024.png'}"  style="width:43px;height:43px;border-radius:0px;"/>&nbsp;&nbsp;
                         <div id="One${chatId}" style="border:red solid 0px;font-size:12px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;width:171px;height: 40px;margin-left: 0px;margin-top: 0px;float: left" >
                                <div style="border:red solid 0px;width: 95px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left">${person.name}</div>
                                <div style="border:red solid 0px;width: 69px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;float: left;text-align: right;color: rgb(155,155,155);font-weight: bold">${timeStr}</div>
@@ -275,7 +299,7 @@
                     // console.log({newMsgNum})
                     if (newMsgNum) {
                         // console.log('here')
-                        html += `<div style='color:rgb(255,254,254);font-size: 9pt;border:1px solid red;min-width:16px;height:16px;text-align: center;align-items: center;border-radius: 100px;background-color: rgb(241,56,56);margin-left: -190px;margin-bottom: 37px;font-weight: bold'>${newMsgNum>=99?'99+':newMsgNum}</div>`;
+                        html += `<div style='color:rgb(255,254,254);font-size: 9pt;border:1px solid red;min-width:16px;height:16px;text-align: center;align-items: center;border-radius: 100px;background-color: rgb(241,56,56);margin-left: -190px;margin-bottom: 37px;font-weight: bold'>${newMsgNum >= 99 ? '99+' : newMsgNum}</div>`;
                     }
                     html += `</div>`;
                 }
